--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <script>
-  const repoOwner = 'VOTRE_NOM_UTILISATEUR';
-  const repoName = 'VOTRE_DEPOT';
+  const repoOwner = 'jedepaepe';
+  const repoName = 'analyste-introduction-legacy';
   const targetUl = document.querySelector('#section-table-content ul');
 
   fetch(`https://api.github.com/repos/${repoOwner}/${repoName}/contents/`)
