--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Analyse</title>
-        <link rel='stylesheet' href='../../css/style.css'>
+        <link rel='stylesheet' href='css/style.css'>
     </head>
 
     <body>
@@ -47,7 +47,7 @@
         <footer>
             &copy; 2019 - Jean-Michel Depaepe - dernière mise à jour 2019-10-24
         </footer>
-        <script src='../../js/script.js'></script>
+        <script src='js/script.js'></script>
     </body>
 
 </html>
