--- a/AT01-class-model/index.html
+++ b/AT01-class-model/index.html
@@ -1100,6 +1100,6 @@ deleteWorker(workerId)
     <script>
         var sdkj = {language: 'sql'};
     </script>
-    <script src='../../../js/script.js'></script>
+    <script src='./js/script.js'></script>
 </body>
 </html>
