--- a/UML03-class/index.html
+++ b/UML03-class/index.html
@@ -1600,6 +1600,6 @@ public class DemoN2NSelf {
             &copy; 2019 - Jean-Michel Depaepe - dernière mise à jour 2021-01-07
         </footer>
     </sec>
-    <script src='../../../js/script.js'></script>
+    <script src='./js/script.js'></script>
 </body>
 </html>
