--- a/AT02-component-model/index.html
+++ b/AT02-component-model/index.html
@@ -165,6 +165,6 @@
     <script>
         var sdkj = {language: 'sql'};
     </script>
-    <script src='../../../js/script.js'></script>
+    <script src='./js/script.js'></script>
 </body>
 </html>
