--- a/AT04-database-model/index.html
+++ b/AT04-database-model/index.html
@@ -837,7 +837,7 @@
         <script>
             var sdkj = { language: 'sql' };
         </script>
-        <script src='../../../js/script.js'></script>
+        <script src='./js/script.js'></script>
 </body>
 
 </html>
