--- a/E01-book-shop/index.html
+++ b/E01-book-shop/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>E1 - Bookshop</title>
-    <link rel='stylesheet' href='../../../css/style.css'>
+    <link rel='stylesheet' href='./css/style.css'>
     <link rel="stylesheet" href="../../../css/codemirror.css">
     <script src="../../../js/codemirror.js"></script>
     <script src="../../../js/clike.js"></script>
