--- a/AT05-navigation-model/index.html
+++ b/AT05-navigation-model/index.html
@@ -301,6 +301,6 @@
     <script>
         var sdkj = {language: 'sql'};
     </script>
-    <script src='./js/script.js'></script>
+    <script src='js/script.js'></script>
 </body>
 </html>
