--- a/E01-book-shop/index.html
+++ b/E01-book-shop/index.html
@@ -185,6 +185,6 @@
             &copy; 2019 - Jean-Michel Depaepe - dernière mise à jour 2019-10-29
         </footer>
     </sec>
-    <script src='./js/script.js'></script>
+    <script src='js/script.js'></script>
 </body>
 </html>
