--- a/AF01-business-process/index.html
+++ b/AF01-business-process/index.html
@@ -186,7 +186,7 @@
             &copy; 2019 - Jean-Michel Depaepe - dernière mise à jour 2019-10-29
         </footer>
     </sec>
-    <script src='./js/script.js'></script>
+    <script src='js/script.js'></script>
 </body>
 
 </html>
