--- a/E06-echecs/index.html
+++ b/E06-echecs/index.html
@@ -574,6 +574,6 @@
     <script>
         var sdkj = {language: 'sql'};
     </script>
-    <script src='./js/script.js'></script>
+    <script src='js/script.js'></script>
 </body>
 </html>
