--- a/AF03a-domain-code/index.html
+++ b/AF03a-domain-code/index.html
@@ -666,6 +666,6 @@
     <script>
         var sdkj = {language: 'sql'};
     </script>
-    <script src='js/script.js'></script>
+    <script src='/js/script.js'></script>
 </body>
 </html>
