--- a/AT06-ui-model/index.html
+++ b/AT06-ui-model/index.html
@@ -97,6 +97,6 @@
     <script>
         var sdkj = {language: 'sql'};
     </script>
-    <script src='js/script.js'></script>
+    <script src='/js/script.js'></script>
 </body>
 </html>
