--- a/E02-ddc/index.html
+++ b/E02-ddc/index.html
@@ -1417,6 +1417,6 @@ public static void main(String[] args) {
             &copy; 2019 - Jean-Michel Depaepe - dernière mise à jour 2019-10-29
         </footer>
     </sec>
-    <script src='js/script.js'></script>
+    <script src='/js/script.js'></script>
 </body>
 </html>
