--- a/01-bases/index.html
+++ b/01-bases/index.html
@@ -424,7 +424,7 @@
             &copy; 2019 - Jean-Michel Depaepe - dernière mise à jour 2021-02-06
         </footer>
     </sec>
-    <script src='/js/script.js'></script>
+    <script src='../js/script.js'></script>
 </body>
 
 </html>
