--- a/AT00-analyse-technique/index.html
+++ b/AT00-analyse-technique/index.html
@@ -118,6 +118,6 @@
     <script>
         var sdkj = {language: 'sql'};
     </script>
-    <script src='/js/script.js'></script>
+    <script src='../js/script.js'></script>
 </body>
 </html>
