--- a/E05-gestion-formations/index.html
+++ b/E05-gestion-formations/index.html
@@ -119,6 +119,6 @@
             &copy; 2020 - Jean-Michel Depaepe - dernière mise à jour 2020-06-28
         </footer>
     </sec>
-    <script src='/js/script.js'></script>
+    <script src='../js/script.js'></script>
 </body>
 </html>
