--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             });
             });
         </script>
-        <script src='/js/script.js'></script>
+        <script src='./js/script.js'></script>
     </body>
 
 </html>
