--- a/AT02-component-model/index.html
+++ b/AT02-component-model/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>AT02-COMPONENTS</title>
-    <link rel='stylesheet' href='./css/style.css'>
+    <link rel='stylesheet' href='../css/style.css'>
     <link rel="stylesheet" href="../../../css/codemirror.css">
     <script src="../../../js/codemirror.js"></script>
     <script src="../../../js/sql.js"></script>
