--- a/E03-contacts/index.html
+++ b/E03-contacts/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>E3 - contacts-viewer</title>
-    <link rel='stylesheet' href='./css/style.css'>
+    <link rel='stylesheet' href='../css/style.css'>
     <link rel="stylesheet" href="../../../css/codemirror.css">
     <script src="../../../js/codemirror.js"></script>
     <script src="../../../js/clike.js"></script>
