--- a/UML09-deployment/index.html
+++ b/UML09-deployment/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>UML09-DEPLOYMENT</title>
-    <link rel='stylesheet' href='./css/style.css'>
+    <link rel='stylesheet' href='../css/style.css'>
     <link rel="stylesheet" href="../../../css/codemirror.css">
     <script src="../../../js/codemirror.js"></script>
     <script src="../../../js/sql.js"></script>
